2005-07-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/termiostty.c: Removed errbuf from priv. It was never
	being used after being allocated and never freed.

2005-06-27  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/common/serial.c (serial_select): Swap the DSR locks and
	mutex locks around to avoid deadlocks with the rest of the code
	which uses this order.
	
2005-06-17  Andreas Gaer <andreas.gaer@baslerweb.com>

	* src/common/serial.c (serial_select): Lock DSRs inside
	serial_select() as the serial DSR calls functions manipulating the
	cbuf structs, leading to a race condition. Also use the mutex to
	avoid races between different threads.

2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/common/serial.c (serial_init): Fix compiler warnings about
	formats strings for diag_printf.	

2004-11-30  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl : CYGPKG_IO_SERIAL_SELECT_SUPPORT requires 
	 CYGFUN_IO_FILEIO_SELECT specifically not just CYGPKG_FILEIO. The 
	 latter provides select support only in kernel configurations.
	 
2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2004-01-12  Dan Jakubiec <djakubiec@yahoo.com>

	* src/common/serial.c: serial_write() was returning an incorrect
	result code in non-blocking mode when output was blocked.  The
	previous code would return ENOERR with 0 bytes written.  This
	was fixed to return EAGAIN.

2003-08-18  Jay Foster <jay@systech.com>

	* src/common/serial.c: Fixed bug for XON/XOFF flow control that
	would cause multiple XON (or XOFF) characters to be sent for a
	single flow control state transition.
	Fixed bug in serial_write() that would cause output data to be
	discarded if using polled mode with flow control, and output
	was blocked due to flow control.
	Fixed bug in serial_data_xmt_req() that would not stop sending
	data when output was flow controlled off (hardware flow control).
